<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:autoText="false"
                android:background="#DF5353"
                android:backgroundTint="#E94444"
                android:text="@string/gasolina_x_etanol"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/posto"
                android:contentDescription="TODO" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextValorDaGasolina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_text_text_valor_da_gasolina"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editTextValorDoEtanol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_text_text_valor_do_etanol"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="#DF5353"
                    android:backgroundTint="#E94444"
                    android:text="@string/resultado"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_calcular"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#B13B3B"
                    android:hint="@string/hint_text_button_calcular"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_limpar"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#B13B3B"
                    android:hint="@string/hint_text_button_limpar"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_finalizar"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#B13B3B"
                    android:hint="@string/hint_text_button_finalizar"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="227dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/posto_ipiranga"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>